k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collaboration-service
spec:
  selector:
    app: collaboration
    role: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
