k8s/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collaboration-ingress
spec:
  rules:
  - host: collaboration
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: collaboration-service
            port:
              number: 80
